fixed burger menu

--- a/frontend/LBTTfrontend/src/index.css
+++ b/frontend/LBTTfrontend/src/index.css
@@ -30,6 +30,7 @@ body {
   display: flex; /* Allow flexbox layout */
   align-items: center; /* Center content vertically */
   justify-content: center; /* Center content horizontally */
+  margin-top: 56px;
 }
 
 .container {
